--- a/Project1/index.html
+++ b/Project1/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Battleship</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <script src="game.js"></script>
   </head>
   <body>
-    <div class="splash-container">
       <h1>Battleship</h1>
-      <div>
-        <script src="game.js"></script>
-      </div>
-      <h2>game</h2>
-    </div>
+        <div class="container">
+          <div class="board board1"></div>
+          <div class="board board2"></div>
+        </div>
+
+        <div class="grid-display"></div>
+
   </body>
 </html>
